# NbFrame

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
benchmarks/: benchmark.py
data/: supplementary_table_all_929_structures.csv  supplementary_table_test_predictions.csv
docs/: output-formats.md  sequence-classifier.md  structure-classifier.md
nbframe/: __init__.py  cli.py  sequence_align.py  sequence_config.py  sequence_predictor.py  structure_classifier.py  structure_config.py  structure_features.py  structure_numbering.py
nbframe/data/: sequence_classifier_lr_2026-01-19.joblib  sequence_classifier_metadata_2026-01-19.json  structure_classifier_metadata_2026-01-19.json  structure_classifier_pipeline_2026-01-19.joblib
tests/: README.md  TestSequences.md  conftest.py  test_cli.py  test_sequence_classifier.py  test_structure_classifier.py  test_structure_features.py
tests/data/pdbs/mmcif/: 9bdo.cif  9bsv.cif
tests/data/sequences/: batch_mixed.fasta  batch_mixed_aligned.fasta  invalid_sequences.fasta  large_batch.fasta  single_extended.fasta  single_kinked.fasta
